# iot-edge-graph-anomaly

./: .bumpversion.cfg  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .hadolint.yaml  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  .trivy.yaml  .yamllint  =0.21.0  =2.2.0  ARCHITECTURE.md  AUTONOMOUS_BENCHMARK_REPORT.json  AUTONOMOUS_BENCHMARK_SUMMARY.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  BACKLOG.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.multi  ENHANCED_RESEARCH_VALIDATION_FRAMEWORK_COMPLETE.md  GENERATION_2_ROBUSTNESS_COMPLETE.md  Makefile  PROJECT_CHARTER.md  README.md  RESEARCH_VALIDATION_REPORT.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETE_V4.md  TERRAGON_AUTONOMOUS_SDLC_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_V4_COMPLETE.md  (+48 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  release-template.md  security.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  performance_regression.md  security_report.md
.github/workflows/: ci.yml
.terragon/: autonomous_executor.py  config.yaml  discover_value.py  perpetual_runner.sh  value_discovery.py
config/: advanced_ensemble.yaml  default.yaml  health_checks.py  production.yaml
deploy/: docker-compose.prod.yml
deploy/kubernetes/: deployment.yaml
deployment/config/: production.yaml
deployment/docker/: Dockerfile.production
deployment/k8s/: iot-anomaly-detection.yaml
deployment/terraform/: main.tf
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ADVANCED_OPTIMIZATION_GUIDE.md  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_SUMMARY.md  COMPLIANCE_FRAMEWORK.md  DEPLOYMENT.md  DEVELOPMENT.md  PERFORMANCE_BENCHMARKS.md  ROADMAP.md  SDLC_ENHANCEMENT_SUMMARY.md  SENTIMENT_ANALYSIS_RESEARCH_FRAMEWORK.md  SETUP_REQUIRED.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETE.md
docs/adr/: 000-template.md  0001-hybrid-lstm-gnn-architecture.md  0001-lstm-autoencoder-architecture.md  0002-container-deployment-strategy.md  0002-edge-deployment-strategy.md  001-lstm-gnn-hybrid-architecture.md  README.md  template.md
docs/deployment/: BUILD.md
docs/guides/: README.md
docs/monitoring/: README.md
docs/status/: autonomous_execution_complete_2025-07-26.md  backlog_status_2025-07-26.md  final_backlog_report_2025-07-26.md
docs/testing/: README.md
docs/workflows/: AUTOMATION_SETUP.md  GITHUB_ACTIONS_SETUP.md  PERFORMANCE_OPTIMIZATION.md  README.md
docs/workflows/examples/: ci.yml  release.yml  security.yml
examples/: comprehensive_demo.py  hybrid_anomaly_detection_demo.py
k8s/: README.md  autoscaling.yaml  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  network-policy.yaml  rbac.yaml  service.yaml  storage.yaml
mock_deps/: torch.py  yaml.py
monitoring/: alert_rules.yml  otel-collector-config.yaml  prometheus.yml
monitoring/grafana/dashboards/: dashboard-config.yml
monitoring/grafana/datasources/: prometheus.yml
monitoring/runbooks/: README.md
quality_check_env/: pyvenv.cfg
research/: academic_publication_toolkit.py  advanced_benchmarking_suite.py  autonomous_research_breakthrough_engine.py  comparative_analysis.py  edge_deployment_benchmark_suite.py  enhanced_research_validation_framework.py
scripts/: build-multiarch.sh  compliance_check.py  entrypoint.sh  healthcheck.sh  release.sh  validate-build.sh
src/iot_edge_anomaly/: __init__.py  advanced_main.py  advanced_monitoring.py  advanced_robustness_framework.py  async_processor.py  autonomous_enhancement_engine.py  autoscaling_system.py  circuit_breaker.py  concurrent_processor.py  config_validator.py  enterprise_robust_main.py  experimental_validation_framework.py  federated_server.py  generation2_robustness_engine.py  generation3_hyperscale_engine.py  global_first_deployment.py  health.py  hyperscale_optimization_engine.py  main.py  optimized_main.py  performance_engine.py  performance_optimizer.py  research_breakthrough_engine.py  robust_error_handling.py  robust_main.py  security_framework.py  validation_utils.py
src/iot_edge_anomaly/compliance/: gdpr_framework.py
src/iot_edge_anomaly/data/: __init__.py  swat_loader.py
src/iot_edge_anomaly/data_pipeline/: production_pipeline.py
src/iot_edge_anomaly/disaster_recovery/: business_continuity.py
src/iot_edge_anomaly/hyperscale/: distributed_federated_learning.py  global_analytics_platform.py  gpu_cluster_orchestration.py  (+3 more)
src/sentiment_analyzer/: __init__.py
tests/: conftest.py  test_advanced_integration.py  test_api.py  test_autonomous_sdlc_comprehensive.py  test_comprehensive_framework.py  test_docker.py  test_gnn_layer.py  test_integration.py  test_lstm_autoencoder.py  test_lstm_autoencoder_advanced.py  test_main_app.py  test_metrics_exporter.py  test_optimization_integration.py  test_performance.py  test_robustness_integration.py  test_security.py  test_sentiment_analyzer.py  test_sentiment_models.py  test_setup.py  test_swat_dataset.py
tests/e2e/: __init__.py  test_example_e2e.py
tests/fixtures/: __init__.py  sample_data.py  test_data.py
tests/integration/: __init__.py  test_example_integration.py  test_full_pipeline.py
tests/mocks/: __init__.py  mock_services.py
tests/performance/: test_benchmarks.py
tests/security/: test_comprehensive_security.py
tests/unit/: test_advanced_models.py  test_example.py  test_example_unit.py
(+67 files in other folders)
